--- a/src/css/mdx.css
+++ b/src/css/mdx.css
@@ -42,3 +42,16 @@
     max-height: 400px;
     overflow: hidden;
 }
+
+.gatsby-resp-image-wrapper {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1650px !important;
+  background-color: transparent;
+}
+
+li {
+  margin-bottom: 10px !important;
+}
