Trading privacy blog added

--- a/src/css/mdx.css
+++ b/src/css/mdx.css
@@ -52,6 +52,11 @@
   background-color: transparent;
 }
 
+ul {
+  list-style-type: circle !important;
+}
+
+
 li {
   margin-bottom: 10px !important;
 }
